fixed tab info + padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 .contact-link {
   color: black;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 .contact-link:hover {
